Quelques corrections sur les docs
